fix the tabs on top being off center

--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,3 +1,7 @@
+.q_tabs.horizontal .tabs-nav li:first-child a {
+    padding-left: 14px !important;
+}
+
 .location-breakdown img {
     width: 200px;
     margin-bottom: 20px;
